Fix alignment warnings in ARMv7 https://bugs.webkit.org/show_bug.cgi?id=55368

Patch by Rob Buis <rbuis@rim.com> on 2012-02-03
Reviewed by Filip Pizlo.

Use reinterpret_cast_ptr and static_cast to get rid of alignment issues in ARMv7 code.

* heap/HandleTypes.h:
(JSC::HandleTypes::getFromSlot):
* heap/MarkedBlock.cpp:
(JSC::MarkedBlock::specializedSweep):
* heap/MarkedBlock.h:
(JSC::MarkedBlock::forEachCell):
* runtime/WriteBarrier.h:
(JSC::WriteBarrierBase::get):
(JSC::WriteBarrierBase::unvalidatedGet):

Canonical link: https://commits.webkit.org/94624@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106686 268f45cc-cd09-0410-ab3c-d52691b4dbfc